--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kyle Bond</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="images/favicon.ico">
+        <link rel="icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Margarine&family=Mina&family=Nova+Square&family=Permanent+Marker&family=Press+Start+2P&family=Sacramento&family=Sancreek&family=Tangerine&display=swap" rel="stylesheet">
     <body>
         <div class="top-container">
-            <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+            <img class="top-cloud" src="cloud.png" alt="cloud-img">
             <h1 class="greeting">Hello!</h1>
             <h2>I'm Kyle!</h2>
             <p>A web <span class="pro">pro</span>grammer.</p>
-            <img class ="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-            <img src="images/mountain.png" alt="mountain-img">
+            <img class ="bottom-cloud" src="cloud.png" alt="cloud-img">
+            <img src="mountain.png" alt="mountain-img">
         </div>
 
         <div class="middle-container">
             <div class="profile">
-              <a class="hover_image" href="images/masked.jpg">
+              <a class="hover_image" href="masked.jpg">
                 <!-- path/to/first/visible/image: -->
-                <img class="my-pic" src="images/masked.jpg" />
+                <img class="my-pic" src="masked.jpg" />
                 <!-- path/to/hover/visible/image: -->
-                <img src="images/Kyle.jpg" class="hide" />
+                <img src="Kyle.jpg" class="hide" />
             </a>              
             <h2>A little about me!</h2>
               <p>I am a web developer, with aspirations to become an Executive Producer. I enjoy seeing people become better verions of themselves. Which is why I want to become a coach and mentor to those I meet. Getting my Scrum Certification would help me to achieve those goals. So I am working on obtaining that as soon as I am able. Not only will it help me with coaching and mentoring, it will help me in all my future endeavors. </p>
@@ -48,11 +48,11 @@
                 <p class="Unity-description">This year has been exciting for me because I have gotten into actually desgining and building a videogame. I am using the Unity engine currently but plan on expanding to using the Unreal engine to learn how to create more realistic 3D games. It has been an exciting time being able to see my creations come to life and actually work.</p>
                 <p>One of the best parts about it, is learning new techniques to make something work even better. I love to solve problems and sind the solutions. Another fun thing for me is to add easter eggs for people to find. Just little nods to put a smile on peoples faces.</p>
                 <p>Below I have some picture examples of what I have been working on. They are also on my Github Repo, which is linked below.</p>
-                <p><img class="Main" src="images/MainArea.png" alt=""></p>
+                <p><img class="Main" src="MainArea.png" alt=""></p>
                 <hr>
-                <p><img class="Waterfall" src="images/Waterfall.png" alt=""></p>
+                <p><img class="Waterfall" src="Waterfall.png" alt=""></p>
                 <hr>
-                <p><img class="Capital" src="images/ETDCapital.png" alt=""></p>
+                <p><img class="Capital" src="ETDCapital.png" alt=""></p>
 
               </div>
             </div>
