--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <img src="Kyle.jpg" class="hide" />
             </a>              
             <h2>A little about me!</h2>
-              <p>I am a web developer, with aspirations to become an Executive Producer. I enjoy seeing people become better verions of themselves. Which is why I want to become a coach and mentor to those I meet. Getting my Scrum Certification would help me to achieve those goals. So I am working on obtaining that as soon as I am able. Not only will it help me with coaching and mentoring, it will help me in all my future endeavors. </p>
-              <p>I have gained many skills over the years that have helped propel me to reach new heights and learn many new skills. I have taught myself how to create and design levels in video games. Creating anything and making it look good is one skill I have developed over the years. When a friend of mine introduced me to Web Development, I took to it like a pig to mud. And I am loving it.</p>
+              <p>I am a web developer, with aspirations to become an Executive Producer. I enjoy seeing people become better verions of themselves. Which is why I want to become a coach and mentor to those I meet. I got my Scrum Certification so that I can better achieve that mentorship and leadership role. Not only has it help me with coaching and mentoring, it is helping me to stay prioritized and focused. </p>
+              <p>I have gained many skills over the years that have helped propel me to reach new heights and learn many new skills. I have taught myself how to create and design levels in video games. Creating anything and making it look good is one skill I have developed over the years and enjoy doing. When a friend of mine introduced me to Web Development, I took to it like a pig to mud. And I am loving it.</p>
             </div>
 
             <hr>
@@ -41,6 +41,7 @@
                 <h3>HTML and CSS</h3>
                 <p class="HTML-description"> HTML and CSS are a new found love for me. When my friend introduced me to it, I couldn't get enough of making something that I have control over designing every aspect of it. I get to see things come to life right before my eyes.</p>
                 <p>I have been trying to teach myself C#, C++ and Python, with some success. However, it seemed like when I started with HTML and CSS, it made sense. I was able to create things and recreate them with little difficulty. And I have fun doing it.</p>
+                <p>
               </div>
               <div class="skill-row">
                 <img class="Unity" src="https://unity3d.com/files/images/ogimg.jpg" alt="Unity_Logo">
