fixed css issue

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kyle Bond</title>
-        <link rel="stylesheet" type="text/css" href="/css/styles.css">
-        <link rel="icon" href="images/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="./styles.css">
+        <link rel="icon" href="./favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Margarine&family=Mina&family=Nova+Square&family=Permanent+Marker&family=Press+Start+2P&family=Sacramento&family=Sancreek&family=Tangerine&display=swap" rel="stylesheet">
