--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 <p>I have been trying to teach myself C#, C++ and Python, with some success. However, it seemed like when I started with HTML and CSS, it made sense. I was able to create things and recreate them with little difficulty. And I have fun doing it.</p>
                 <p>Along with this website I was able to help create the website for the current company I am with. This was a fun project to work on. Linked is that site.</p>
                 <br>
-                <br>
                 <p><a href="https://moonriftentertainment.com/pages/game_pages/kiwi.html">Moonrift Entertainment Website</a></p>
               </div>
               <div class="skill-row">
@@ -53,10 +52,10 @@
                 <h3>Unity</h3>
                 <p class="Unity-description">This last year has been exciting for me because I have gotten into actually desgining and building videogames. I am using the Unity engine currently but plan on expanding to using the Unreal engine to learn how to create more realistic 3D games. It has been an exciting time being able to see my creations come to life and actually work.</p>
                 <p>One of the best parts about it, is learning new techniques to make something work even better. I love to solve problems and sind the solutions. Another fun thing for me is to add easter eggs for people to find. Just little nods to put a smile on peoples faces.</p>
-                <p>Below are some images of what I am working on. Also linked is the game we officially released on itch.io. I am also apart of three more games, soon to be released, that I am a level designer for. </p>
+                <p>Below are some images of a couple of games I am working on. Also linked is the game we officially released on itch.io. I am also apart of three more games, soon to be released, that I am a level designer for. </p>
                 <br>
                 <p><a href="https://moonrift.itch.io/soul-guard">Soul Guard</a></p>
-                <p>We are currently working on another release of this game. Huge changes are in store.</p>
+                <p>(We are currently working on another release of this game. Huge changes are in store.)</p>
                 <br>
                 <p><img class="Main" src="./MainArea.png" alt=""></p>
                 <hr>
